1. Add error view; 2. Fixed Filter fields not aligned properly bug; 3. Fixed The IkonliPackTileView may display a blank preview

--- a/components/src/main/resources/com/dlsc/jfxcentral2/theme.css
+++ b/components/src/main/resources/com/dlsc/jfxcentral2/theme.css
@@ -3859,10 +3859,6 @@
     -fx-scale-y: 1.4;
 }
 
-.icon-tile-view > .content-box > .flip-view .front-box .icon-grid-wrapper {
-    -fx-border-color: -grey-10;
-}
-
 .icon-tile-view:lg > .content-box > .flip-view .front-box .icon-grid-wrapper {
     -fx-min-height: 245px;
     -fx-max-height: 245px;
@@ -5027,12 +5023,16 @@
     -fx-max-width: 35px;
 }
 
-.videos-filter-view:sm .filter-box-1 > .spacer {
-    -fx-max-width: 31px;
+.videos-filter-view:sm .filter-box > .filter-title {
+    -fx-pref-width: 65px;
+    -fx-min-width: 65px;
+    -fx-max-width: 65px;
 }
 
-.videos-filter-view:sm .filter-box-2 > .spacer {
-    -fx-max-width: 19px;
+.videos-filter-view:sm .filter-box > .spacer {
+    -fx-min-width: 0px;
+    -fx-pref-width: 0px;
+    -fx-max-width: 0px;
 }
 
 /** ------------------------------------
@@ -5068,7 +5068,7 @@
     -fx-max-width: 1310px;
 }
 
-.books-filter-view:md .content-box .filter-combo-box{
+.books-filter-view:md .content-box .filter-combo-box {
     -fx-pref-width: 200px;
 }
 
@@ -7125,12 +7125,12 @@
 
 .search-result-list-cell:selected,
 .search-result-list-cell:hover {
-    -fx-background-color: #e2e2e255  !important;
+    -fx-background-color: #e2e2e255 !important;
 }
 
-.search-result-list-cell:focused:selected ,
+.search-result-list-cell:focused:selected,
 .search-result-list-cell:selected {
-    -fx-background-color: #cfdbfa55  !important;
+    -fx-background-color: #cfdbfa55 !important;
 }
 
 .search-result-list-cell :selected .label {
@@ -7175,7 +7175,7 @@
 /** ------------------------------------
  * search-field-list-view (SearchField popup)
  */
-.search-field-list-view  {
+.search-field-list-view {
     -fx-pref-height: 350px !important;
 }
 
@@ -7544,4 +7544,177 @@
 
 .hamburger-menu-view > .content-box > .menus-box .hamburger-menu-button .button-graphic {
     -fx-alignment: center-left;
+}
+
+/** ----------------------------------------------------------------------------
+ * Header
+ */
+.header {
+    -fx-alignment: center-left;
+}
+
+/** ----------------------------------------------------------------------------
+ * ErrorView
+ */
+.error-view {
+    -fx-background-color: -background;
+}
+
+.error-view:lg {
+    -fx-pref-width: -lg-width;
+    -fx-max-width: -lg-width;
+    -fx-pref-height: 741px;
+    -fx-max-height: 741px;
+}
+
+.error-view:md {
+    -fx-pref-width: -md-width;
+    -fx-max-width: -md-width;
+    -fx-pref-height: 741px;
+    -fx-max-height: 741px;
+}
+
+.error-view:sm {
+    -fx-pref-width: -sm-width;
+    -fx-max-width: -sm-width;
+    -fx-pref-height: 586px;
+    -fx-max-height: 586px;
+}
+
+.error-view .dialog-pane {
+    -fx-background-color: transparent;
+}
+
+.error-view:lg .dialog-pane {
+    -fx-pref-width: 474px;
+    -fx-max-width: 474px;
+}
+
+.error-view:md .dialog-pane {
+    -fx-pref-width: 333px;
+    -fx-max-width: 333px;
+}
+
+.error-view:sm .dialog-pane {
+    -fx-pref-width: 318px;
+    -fx-max-width: 318px;
+}
+
+.error-view .dialog-pane > .header {
+    -fx-padding: 6px 13px;
+    -fx-background-color: -bright-blue;
+    -fx-background-radius: 5px 5px 0 0;
+}
+
+.error-view:lg .dialog-pane > .header {
+    -fx-padding: 6px 13px;
+}
+
+.error-view:sm-md .dialog-pane > .header {
+    -fx-padding: 4px 9px;
+}
+
+.error-view .dialog-pane > .header > .header-title {
+    -fx-text-fill: -white;
+    -fx-font-weight: bold;
+}
+
+.error-view .dialog-pane > .header > .header-icon-wrapper {
+    -fx-background-color: -red;
+    -fx-background-radius: 5px;
+    -fx-border-color: -white;
+    -fx-border-radius: 5px;
+    -fx-border-width: 1px;
+}
+
+.error-view:lg .dialog-pane > .header > .header-icon-wrapper {
+    -fx-padding: 6px;
+}
+
+.error-view:sm-md .dialog-pane > .header > .header-icon-wrapper {
+    -fx-padding: 3px;
+}
+
+.error-view .header > .header-icon-wrapper > .ikonli-font-icon {
+    -fx-icon-size: 16px;
+    -fx-icon-color: -white;
+}
+
+.error-view:lg .header > .header-icon-wrapper > .ikonli-font-icon {
+    -fx-scale-x: 1.3;
+    -fx-scale-y: 1.3;
+}
+
+.error-view:sm-md .header > .header-icon-wrapper > .ikonli-font-icon {
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
+}
+
+.error-view .dialog-pane > .center-box {
+    -fx-padding: 40px 49px 45px 49px;
+    -fx-background-color: -grey-10;
+    -fx-background-radius: 0 0 10px 10px;
+    -fx-border-color: -bright-blue;
+    -fx-border-radius: 0 0 5px 5px;
+    -fx-border-width: 0 3px 3px 3px;
+    -fx-alignment: top-center;
+}
+
+.error-view:lg .dialog-pane > .center-box {
+    -fx-padding: 40px 49px 45px 49px;
+    -fx-spacing: 30px;
+}
+
+.error-view:md .dialog-pane > .center-box {
+    -fx-padding: 28px 15px 30px 15px;
+    -fx-spacing: 14px;
+}
+
+.error-view:sm .dialog-pane > .center-box {
+    -fx-padding: 26px 12px 29px 12px;
+    -fx-spacing: 13px;
+}
+
+.error-view .dialog-pane > .center-box .message {
+    -fx-text-fill: -grey-60;
+    -fx-text-alignment: center;
+    -fx-font-size: 16px;
+}
+
+.error-view .dialog-pane > .center-box .buttons-box {
+    -fx-spacing: 5px;
+    -fx-alignment: center;
+}
+
+.error-view .dialog-pane > .center-box .buttons-box .action-btn {
+    -fx-background-radius: 30px;
+    -fx-font-family: "Roboto Condensed";
+    -fx-font-weight: bold;
+    -fx-padding: 10px 40px;
+    -fill: -grey-100;
+    -bg: -light-blue;
+}
+
+.error-view:lg .dialog-pane > .center-box .buttons-box .action-btn {
+    -fx-padding: 10px 40px;
+}
+
+.error-view:md .dialog-pane > .center-box .buttons-box .action-btn {
+    -fx-padding: 7px 28px;
+}
+
+.error-view:sm .dialog-pane > .center-box .buttons-box .action-btn {
+    -fx-padding: 7px 27px;
+}
+
+.error-view .dialog-pane > .center-box .buttons-box .action-btn-green {
+    -bg: -green;
+}
+
+.error-view .dialog-pane > .center-box .buttons-box .action-btn-orange {
+    -bg: -orange;
+}
+
+.error-view .dialog-pane > .center-box .buttons-box .action-btn-red {
+    -bg: -red;
 }
